--- a/database/config.ini
+++ b/database/config.ini
@@ -12,11 +12,11 @@ db_name = guest
 # 发送邮箱服务器
 HOST_SERVER = smtp.163.com
 # 邮件发件人
-FROM = yx2124@163.com
+FROM = 111@163.com
 # 邮件收件人
-TO = yj2124@126.com
+TO = 222@126.com
 # 发送邮箱用户名/密码
-user = yx2124@163.com
-password = yxxjsjyj30
+user = 111@163.com
+password = aaa
 # 邮件主题
 SUBJECT = 发布会系统接口自动化测试报告
