--- a/database/config.ini
+++ b/database/config.ini
@@ -17,6 +17,6 @@ FROM = 111@163.com
 TO = 222@126.com
 # 发送邮箱用户名/密码
 user = 111@163.com
-password = aaa
+password = ********
 # 邮件主题
 SUBJECT = 发布会系统接口自动化测试报告
